# opencp-api

./: .env  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml
.github/workflows/: api-test.yml  pylint.yml  tester.yml
api/: Dockerfile
api/src/: main.py  sql.py
app/: Dockerfile  Makefile  requirements.txt  setup.cfg  setup.py
app/src/: decorators.py  kutils.py  main.py  schema.py  server.py
app/src/kutils/: __init__.py  functions.py
app/src/routes/: auth.py  problemset.py  users.py
app/src/test/: conftest.py  test_kutils.py  test_users.py
app/test/: test_kutils_functions.py  test_users.py
backend/: requirements.txt
backend/src/: auth.py
backend/src/backend/: minio.py
kc/: Dockerfile  configure-keycloak.py  requirements.txt
sql/: 10_init_db.sh  30_seed.sql  init.sql  schema.sql
sql/schema/: 20_schema.sql
src/: auth.py  config.py  entity.py  main.py  schemas.py
src/api/v1/: problems.py
src/backend/: elastic.py  keycloak.py  postgres.py  redis.py
src/routers/: core.py  problems.py
