[metadata]
name = kutils
description = Package that contains functions for parsing data from keycloak.
author = astratakis
author_email = andrew.stratakis@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pyscaffold/pyscaffold/

project_urls =
    Documentation = https://pyscaffold.org/

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata


[options.packages.find]
where = src
exclude =
    test

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]

[tool:pytest]
addopts =
    --cov kutils --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = test

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.6
package = kutils
